--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
     /* padding: 15px; */
 }
 
+.mobile-nav-bg{
+    /* background: linear-gradient(to bottom right ,#3D3459 , #171335 , #383055); */
+    background-color: #2F2F2F;
+}
+
 body{
     overflow: hidden;
 }
