--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,9 @@
 .mobile-nav-bg{
     /* background: linear-gradient(to bottom right ,#3D3459 , #171335 , #383055); */
     background-color: #286d6d;
-    /* border-top-right-radius: 100px; */
-    /* border-top-left-radius: 100px; */
-    border-radius: 35px;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    /* border-radius: 35px; */
 
 }
 
