--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@
 
 .mobile-nav-bg{
     /* background: linear-gradient(to bottom right ,#3D3459 , #171335 , #383055); */
-    background-color: #286d6d;
+    /* background-color: #803bc0; */
+    
     border-top-right-radius: 50px;
     border-top-left-radius: 50px;
     /* border-radius: 35px; */
